--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="container-md mb-15">
-        <h2 class="mt-10" > Random String Generator </h2>
-        <div class="row g-3 align-items-center mt-00 mb-10">
+        <h2 class="mt-10 mb-10" > Random String Generator </h2>
+        <div class="row g-3 align-items-center mt-00">
             <div class="col-2 mt-00 pr-0">
                 <label for="chCount" class="col-form-label ">String should be </label>
             </div>
